despatma/tests/fail/visitor/invalid_dyn.stderr
error[E0404]: expected trait, found struct `Rectangle`
 --> tests/fail/visitor/invalid_dyn.rs:7:26
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, Cube);
  |                          ^^^^^^^^^ not a trait

warning: trait objects without an explicit `dyn` are deprecated
 --> tests/fail/visitor/invalid_dyn.rs:7:54
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, Cube);
  |                                                      ^^^^
  |
  = warning: this is accepted in the current edition (Rust 2018) but is a hard error in Rust 2021!
  = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
  = note: `#[warn(bare_trait_objects)]` on by default
help: if this is an object-safe trait, use `dyn`
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, dyn Cube);
  |                                                      +++

warning: trait objects without an explicit `dyn` are deprecated
 --> tests/fail/visitor/invalid_dyn.rs:7:54
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, Cube);
  |                                                      ^^^^
  |
  = warning: this is accepted in the current edition (Rust 2018) but is a hard error in Rust 2021!
  = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: if this is an object-safe trait, use `dyn`
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, dyn Cube);
  |                                                      +++
help: alternatively use a blanket implementation to implement `visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, Cube)` for all types that also implement `Cube`
  |
7 | visitor!(dyn Circle, dyn Rectangle, dyn Sphere, Arc, T)<T: Cube>;
  |                                                      ~ +++++++++
